# adetailer_sdxl

./: pyproject.toml  requirements.txt
